--- a/main.css
+++ b/main.css
@@ -44,8 +44,54 @@
     width: 100%;
     padding: 0.5rem;
   
-    position: absolute;
+    position: relative;
+    margin-top: auto;
     display: flex;
     justify-content: center;
     bottom: 0;
+  }
+
+  #foto img {
+    display: block;
+    border-radius: 50%;
+    width: 150px;
+  }
+
+  #Login {
+    color: white;
+    margin-top: auto;
+    display: flex;
+    justify-content: center;
+    font-size: 13pt;
+  }
+
+  #FundosPalavras {
+    background-color: #394674; color: white;
+  }
+
+  #informacoes-perfil {
+    font-size: 15pt;
+    padding: 15px;
+    margin: 15px;
+    border-radius: 10px;
+    background-color: #394674;
+    color: white;
+  }
+
+  .item-painel {
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: white;
+    color:#394674;
+  }
+
+  .tabela tr:nth-child(even) {
+    background-color: #394674;
+    color: white;
+  }
+
+  #tabela th {
+    background-color: #394674;
+    color: white;
   }
